# bobpy

./: .bobpy.toml  .gitignore  .python-version  Cargo.toml  LICENSE  README.md
.github/workflows/: check-and-lint.yaml  release-packaging.yaml  test.yaml
src/: build.rs  cli.rs  commands.rs  config.rs  fs_utils.rs  git.rs  lib.rs  main.rs  parsing.rs
