[package]
name = "bobpy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.27", features = ["derive"] }
config = "0.13.2"
fs_extra = "1.2.0"
glob = "0.3.0"
once_cell = "1"
serde = { version = "1.0.147", features = ["derive"] }
uuid = { version = "1.2.2", features = ["v4"] }

[dev-dependencies]
tempfile = "3.3.0"
